# pytessy

./: README.md  exampleUsage.py  requirements.txt  setup.cfg
source/: pytessy.py
src/: pytessy.py
