[metadata]
name = pytessy
version = 0.1.1
license = Boost Software License - Version 1.0 - August 17th, 2003
description = Faster access to Tesseract-OCR from Python.
long_description = file: README.md
author = jevgienij
author_email = 6131866+jevgienij@users.noreply.github.com
classifiers=

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    numpy==1.20.3

[options.packages.find]
where=src